--- a/20160830_JavaScriptCopy/copytest.html
+++ b/20160830_JavaScriptCopy/copytest.html
@@ -3,16 +3,24 @@
 <head>
 <meta charset="utf-8">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="MooTools-Core-1.6.0.js"></script>
 <script>
-  // 숫자형
+  //숫자형
   // var testA = 0;
   // var testB = testA;
   // testB = 1;
-
+  //
   // console.log('testA',testA);
   // console.log('testA type : ',typeof testA);
   // console.log('testB',testB);
   // console.log('testB type : ',typeof testB);
+  //
+  // -------------------------------------------
+  //
+  // testA 0
+  // testA type :  number
+  // testB 1
+  // testB type :  number
 
 
 
@@ -25,7 +33,13 @@
   // console.log('testA type : ',typeof testA);
   // console.log('testB',testB);
   // console.log('testB type : ',typeof testB);
-
+  //
+  // -------------------------------------------
+  //
+  // testA 테스트
+  // testA type :  string
+  // testB hello world
+  // testB type :  string
 
 
   // 함수
@@ -37,6 +51,13 @@
   // console.log('testA type : ',typeof testA);
   // console.log('testB',testB);
   // console.log('testB type : ',typeof testB);
+  //
+  // -------------------------------------------
+  //
+  // testA (str=0){alert(str)}
+  // testA type :  function
+  // testB (abc=0){alert(abc)}
+  // testB type :  function
 
 
 
@@ -49,6 +70,13 @@
   // console.log('testA type : ',typeof testA);
   // console.log('testB',testB);
   // console.log('testB type : ',typeof testB);
+  // //
+  // // -------------------------------------------
+  // //
+  // testA ["테스트", 1, 2, 3, 4]
+  // testA type :  object
+  // testB ["테스트", 1, 2, 3, 4]
+  // testB type :  object
 
 
 
@@ -64,15 +92,37 @@
   //   }
   // }
   // var testB = testA;
-  // // var testB = Object.assign({},testA);
-  // // // // var testB = Object.assign({},testA.F);
   // testB.A = '테스트';
-  // // // testB.F.FA = '테스트';
   //
   // console.log('testA',testA);
   // console.log('testA type : ',typeof testA);
   // console.log('testB',testB);
   // console.log('testB type : ',typeof testB);
+
+
+
+  // 오브젝트의 얕은 복사-1
+  // var testA = {
+  //   'A' : 0,
+  //   'B' : '테스트',
+  //   'C' : new Date('2016-08-30 12:30:00'),
+  //   'D' : function(){alert('test')},
+  //   'E' : [0,1,2,3,4],
+  //   'F' : {
+  //     'FA' : 1
+  //   }
+  // }
+  // var testB = Object.assign({},testA);
+  // // var testB = Object.assign({},testA.F);
+  // testB.A = '테스트';
+  // // testB.F.FA = 'other value';
+  //
+  // console.log('testA',testA);
+  // console.log('testA type : ',typeof testA);
+  // console.log('testB',testB);
+  // console.log('testB type : ',typeof testB);
+  //
+  // Object.assign이란 객체를 합병하여 복사시켜주는 내장함수
 
 
 
@@ -103,7 +153,8 @@
   //   }
   // }
   // var testB = clone(testA);
-  // testB.F.FA = 'other value';
+  // testB.A = '테스트';
+  // // testB.F.FA = 'other value';
   //
   // console.log('testA',testA);
   // console.log('testA type : ',typeof testA);
@@ -124,8 +175,8 @@
   //   }
   // }
   // var testB = $.extend({}, testA);
-  // testB.A = 'hello';
-  // testB.F.FA = 'other value';
+  // testB.A = '테스트';
+  // // testB.F.FA = 'other value';
   //
   // console.log('testA',testA);
   // console.log('testA type : ',typeof testA);
@@ -134,7 +185,93 @@
 
 
 
-  // 오브젝트 얕은복사-4
+  // 오브젝트 깊은복사-1
+  // var testA = {
+  //   'A' : 0,
+  //   'B' : '테스트',
+  //   'C' : new Date('2016-08-30 12:30:00'),
+  //   'D' : function(){alert('test')},
+  //   'E' : [0,1,2,3,4],
+  //   'F' : {
+  //     'FA' : 1
+  //   }
+  // }
+  // var testB = $.extend(true, {}, testA);
+  // testB.A = '테스트';
+  // testB.F.FA = 'other value';
+  // testB.D();
+  //
+  // console.log('testA',testA);
+  // console.log('testA type : ',typeof testA.C);
+  // console.log('testB',testB);
+  // console.log('testB type : ',typeof testB.C);
+
+
+
+  // 오브젝트 깊은복사-2
+  // var testA = {
+  //   'A' : 0,
+  //   'B' : '테스트',
+  //   'C' : new Date('2016-08-30 12:30:00'),
+  //   'D' : function(){alert('test')},
+  //   'E' : [0,1,2,3,4],
+  //   'F' : {
+  //     'FA' : 1
+  //   }
+  // }
+  // var testB = JSON.parse(JSON.stringify(testA));
+  // testB.A = '테스트';
+  // //testB.F.FA = 'other value';
+  //
+  // console.log('testA',testA);
+  // console.log('testA type : ',typeof testA.C);
+  // console.log('testB',testB);
+  // console.log('testB type : ',typeof testB.C);
+
+
+
+  // 오브젝트 깊은복사-3
+  // function clone(obj) {
+  // 	if (obj === null || typeof(obj) !== 'object') // 타입이 object가 아닐경우는 바로 리턴
+  //   	return obj;
+  //
+  //   var copy = obj.constructor(); // obj의 타입을 새로운 변수의 타입으로 지정
+  //
+  //   for (var attr in obj) {
+  // 		if (obj.hasOwnProperty(attr)) {
+  //     	copy[attr] = clone(obj[attr]);
+  // 		}
+  //   }
+  //
+  //   return copy;
+  // }
+  //
+  // var testA = {
+  //   'A' : 0,
+  //   'B' : '테스트',
+  //   'C' : new Date('2016-08-30 12:30:00'),
+  //   'D' : function(){alert('test')},
+  //   'E' : [0,1,2,3,4],
+  //   'F' : {
+  //     'FA' : 1
+  //   }
+  // }
+  // var testB = clone(testA);
+  // testB.A = '테스트';
+  // testB.F.FA = 'other value';
+  //
+  // // testC = new Date(testB.C);
+  // // console.log('testC',testC);
+  // // console.log('testC type : ',typeof testC);
+  //
+  // console.log('testA',testA);
+  // console.log('testA type : ',typeof testA);
+  // console.log('testB',testB);
+  // console.log('testB type : ',typeof testB);
+
+
+
+  // 오브젝트 깊은복사-4 mooth
   var testA = {
     'A' : 0,
     'B' : '테스트',
@@ -145,15 +282,18 @@
       'FA' : 1
     }
   }
-  var testB = testA;
-  testB.A = 'hello';
+  var testB = Object.clone(testA);
+  testB.A = '테스트';
   testB.F.FA = 'other value';
+
+  // testC = new Date(testB.C);
+  // console.log('testC',testC);
+  // console.log('testC type : ',typeof testC);
 
   console.log('testA',testA);
   console.log('testA type : ',typeof testA);
   console.log('testB',testB);
   console.log('testB type : ',typeof testB);
-
 
 
 
